fix (#1): resolve contrast issue for mermaidjs

--- a/scss/obsidian.scss
+++ b/scss/obsidian.scss
@@ -30,3 +30,9 @@
   font-size: 0.8rem;
   opacity: 0.5;
 }
+
+// Mermaid
+.statediagram-note rect {
+  fill: var(--background-secondary-alt) !important;
+  stroke: #fff !important;
+}
